--- a/test.html
+++ b/test.html
@@ -106,12 +106,96 @@
             </p>
         </div>
       </div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
+      <div class="swiper-slide">
+        <img src="Benefield_Eden_square.jpg" alt="">
+        <div>
+            <h2>Patient Testimonals</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem est mollitia nulla earum minima sit.<br>
+            <span>-Person</span>
+            </p>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="Bross_Kacey_square.jpg" alt="">
+        <div>
+            <h2>Patient Testimonals</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem est mollitia nulla earum minima sit.<br>
+            <span>-Person</span>
+            </p>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="Caillouet_Sherri_squarejpg.jpg" alt="">
+        <div>
+            <h2>Patient Testimonals</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem est mollitia nulla earum minima sit.<br>
+            <span>-Person</span>
+            </p>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="Davis_Shaunetra_square.jpg" alt="">
+        <div>
+            <h2>Patient Testimonals</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem est mollitia nulla earum minima sit.<br>
+            <span>-Person</span>
+            </p>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="Kreeger_Nevaeh_square.jpg" alt="">
+        <div>
+            <h2>Patient Testimonals</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem est mollitia nulla earum minima sit.<br>
+            <span>-Person</span>
+            </p>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="Mitchell_McKenzie_square.jpg" alt="">
+        <div>
+            <h2>Patient Testimonals</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem est mollitia nulla earum minima sit.<br>
+            <span>-Person</span>
+            </p>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="Murray_Meggan_square.jpg" alt="">
+        <div>
+            <h2>Patient Testimonals</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem est mollitia nulla earum minima sit.<br>
+            <span>-Person</span>
+            </p>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="Plaisance_Elish_square.jpg" alt="">
+        <div>
+            <h2>Patient Testimonals</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem est mollitia nulla earum minima sit.<br>
+            <span>-Person</span>
+            </p>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="Sharon_Kurt_square.jpg" alt="">
+        <div>
+            <h2>Patient Testimonals</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem est mollitia nulla earum minima sit.<br>
+            <span>-Person</span>
+            </p>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <img src="Stapp Julia_square.jpg" alt="">
+        <div>
+            <h2>Patient Testimonals</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem est mollitia nulla earum minima sit.<br>
+            <span>-Person</span>
+            </p>
+        </div>
+      </div>
     </div>
     <!-- Add Arrows -->
     <div class="arrows">
@@ -122,12 +206,16 @@
   <div class="swiper-container gallery-thumbs">
     <div class="swiper-wrapper">
       <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(Roussel_Reece_square.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(Benefield_Eden_square.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(Bross_Kacey_square.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(Caillouet_Sherri_squarejpg.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(Davis_Shaunetra_square.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(Kreeger_Nevaeh_square.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(Mitchell_McKenzie_square.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(Murray_Meggan_square.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(Plaisance_Elish_square.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(Sharon_Kurt_square.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(Stapp\ Julia_square.jpg)"></div>
     </div>
   </div>
 
@@ -138,9 +226,9 @@
   <script>
     var galleryThumbs = new Swiper('.gallery-thumbs', {
       spaceBetween: 10,
-      slidesPerView: 4,
-      loop: true,
-      freeMode: true,
+      slidesPerView: 11,
+      loop: false,
+      freeMode: false,
       loopedSlides: 5, //looped slides should be the same
       watchSlidesVisibility: true,
       watchSlidesProgress: true,
